fix: Fixed list option gap and words animation

--- a/src/components/AboutComponent/styles.scss
+++ b/src/components/AboutComponent/styles.scss
@@ -34,6 +34,11 @@
     flex-direction: column;
     justify-content: center;
     padding-left: 3rem;
+    gap: 0.25rem;
+
+    &.gap-enabled {
+        gap: 0.5rem;
+    }
 
     &.less-padding {
         padding-left: 2rem;
